--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -8,14 +8,14 @@ section:
   template: sections/about.html
 
 # your designation
-designation: Software Engineer
+designation: Simulation Software Engineer
 # your company information
 company:
-  name: GMV Innovating Solution
-  url: "https://www.gmv.com"
+  name: Autodesk, Inc.
+  url: "https://www.autodesk.com"
 
 # your resume. this file path should be relative to you "static" directory
-resume: "files/mwyrozebski_cv.pdf"
+# resume: "files/mwyrozebski_cv.pdf"
 
 # a summary about you
 summary: 'I am a software engineer with scientific background.'
